@@ -22,6 +22,9 @@ jobs:
         run: npm ci
 
       - name: Run strict managed verify gate
+        env:
+          WEFTEND_RELEASE_DIR: tests/fixtures/release_demo
+          WEFTEND_ALLOW_SKIP_RELEASE: ""
         run: npm run verify:360:release:managed
 
       - name: Upload verify artifacts
